# flutterwave-v3-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
flutterwave-models/: Cargo.toml
flutterwave-models/src/: encrypted_payload.rs  errors.rs  lib.rs
flutterwave-models/src/charge/: ach.rs  mod.rs
flutterwave-models/src/charge/bank_transfer/: mod.rs
flutterwave-models/src/charge/direct_charge/: mod.rs
flutterwave-models/src/common/: card_data_res.rs  mod.rs
flutterwave-models/src/payment_plans/: cancel_plan.rs  create_plan.rs  get_plan.rs  get_plans.rs  interval.rs  mod.rs  plan_res.rs  update_plan.rs
flutterwave-models/src/transactions/: mod.rs  transaction_verify.rs
flutterwave-models/src/validate_charge/: mod.rs
flutterwave-models/src/virtual_acct_number/: create_virtual_account.rs  get_bulk_virtual_acct_details.rs  mod.rs
src/: fwcall.rs  lib.rs  v3_client.rs
