[package]
name = "flutterwave-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "flutterwave-models"
]

[workspace.dependencies]
reqwest = { version = "0.12.12", features = ["brotli", "deflate", "gzip", "rustls-tls", "stream", "zstd", "json"] }
serde = { version="1.0.189", features=["derive"] }
validator = { version = "0.16.1", features = ["card", "derive", "phone"] }
openssl = "0.10.68"
thiserror = "1.0.57"
serde_json = "1.0.114"
chrono = { version="0.4.38", features=["serde"] }

[dependencies]
flutterwave-models = { path = "./flutterwave-models" }
openssl = { features = ["bindgen", "v111", "v110", "vendored"], version = "0.10.68" }
serde_json = { workspace = true }
validator = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
hex = "0.4.3"
base64 = "0.22.1"
tokio = { version = "1.42.0", features = ["macros", "net", "rt", "test-util"] }
async_symm_crypto = "0.1.0"
serde_qs = "0.13.0"
